--- a/style.css
+++ b/style.css
@@ -101,3 +101,38 @@ body {
     margin-top: 20px;
     transition: all 0.1s;
 }
+
+.sidenav {
+    height: 100vh;
+    width: 20vw;
+    background-color: #111;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.sidenav a {
+    display: block;
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    background-color: #818181;
+    padding: 10px;
+    color: #fff;
+    margin: 10px 20px 10px 0;
+}
+
+.sidenav a:hover {
+    color: #111;
+}
+
+.main {
+    position: fixed;
+    top: 0;
+    left: 20vw;
+    height: 100vh;
+    width: 80vw;
+}
