--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 .background {
-    background-image: url("images/background.jpeg");
+    background-image: url(/images/background.jpeg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -107,33 +107,6 @@ body {
     margin-top: 20px;
     transition: all 0.1s;
 }
-/* 
-.sidenav {
-    display: table-column;
-    height: 100vh;
-    width: 100vw;
-    background-color: #111;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-}
-.sidenav a {
-    display: block;
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    background-color: #818181;
-    padding: 10px;
-    color: #fff;
-    margin: 10px 20px 10px 0;
-}
-
-.sidenav a:hover {
-    color: #111;
-} */
 
 .navbar {
     position: fixed;
@@ -142,6 +115,24 @@ body {
 }
 .navbar * {
     color: #fff !important;
+    transition: 0.2s;
+}
+
+.perfil{
+    position: fixed;
+    top:0;
+    right:0;
+    margin: 15px 20px;
+}
+
+.perfil img{
+    width: 50px;
+    height: 50px;
+}
+
+.navbar a:hover{
+    color: aqua!important;
+    transition: 0.2s;
 }
 
 .navbar-toggler-icon {
