--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
     user-select: none;
 }
 
+.titulo{
+    color: white;
+    text-align: center;
+}
+
 .App {
     display: flex;
     height: 100vh;
@@ -108,7 +113,7 @@ body {
     transition: all 0.1s;
 }
 
-.navbar {
+.navbar{
     position: fixed;
     width: 100vw;
     background-color: #1111115e !important;
@@ -119,10 +124,9 @@ body {
 }
 
 .perfil{
-    position: fixed;
-    top:0;
-    right:0;
-    margin: 15px 20px;
+    position: absolute;
+    right: 8px;
+    top: 8px;
 }
 
 .perfil img{
