--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
 
 * {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    user-select: none;
 }
 
 .titulo{
@@ -157,13 +156,35 @@ input[type="text"]{
     margin: 20px 0;
 
 }
+input[type="email"]{
+    min-width: 80%;
+    font-size: 1.5em;
+    border-radius: 0.75em;
+    outline: none;
+    border: #000000;
+    padding: 5px 15px;
+    margin: 20px 0;
 
+}
+textarea{
 
+    width: 100%;
+    font-size: 1.5em;
+    border-radius: 0.75em;
+    outline: none;
+    border: #000000;
+    padding: 15px 25px;
+    margin: 20px 0;
+
+}
 
 .label{
-    display: block;
+    display: inline;
     color: white;
     font-size: 1.3em;
+    margin: 10px;
+}
+.center{
     text-align: center;
 }
 
