--- a/client/src/components/Form/RoundButton/style.css
+++ b/client/src/components/Form/RoundButton/style.css
@@ -1,4 +1,4 @@
-.anchor-button-wrapper {
+.round-button-wrapper {
     display: flex;
     width: 20rem;
     height: 4.25rem;
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
 }
-.anchor-button-wrapper .anchor-button {
+.round-button-wrapper .round-button {
     display: block;
     flex: none;
     width: 15rem;
@@ -24,7 +24,7 @@
     cursor: pointer;
     transition: all 0.1s;
 }
-.anchor-button-wrapper:hover .anchor-button {
+.round-button-wrapper:hover .round-button {
     width: 100%;
     height: 100%;
     line-height: 70px;
