--- a/client/src/components/NavBar/style.css
+++ b/client/src/components/NavBar/style.css
@@ -1,9 +1,13 @@
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 .navbar {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  top: 0px;
+  left: 0px;
+  justify-content: space-between;
+
+  font-family: Arial, Helvetica, sans-serif;
   overflow: hidden;
   background-color: #333;
 }
