--- a/client/src/components/Form/PromptBox/style.css
+++ b/client/src/components/Form/PromptBox/style.css
@@ -1,12 +1,11 @@
 
 .prompt-box {
+    width: fit-content;
     text-align: center;
-    width: 76%;
     color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
-    padding: 10px;
-    margin-bottom: 20px;
+    padding: 10px 20px;
     border: 1px solid transparent;
     border-radius: 4px;
 
@@ -14,9 +13,5 @@
     font-size: 14px;
     letter-spacing: 1px;
     box-sizing: border-box;
-    margin-bottom: 50px;
-    margin-left: 46px;
     text-align: center;
-    margin-bottom: 27px;
-    font-family: 'Ubuntu', sans-serif;
 }
