--- a/client/src/components/Form/RoundButton/style.css
+++ b/client/src/components/Form/RoundButton/style.css
@@ -3,7 +3,7 @@
     width: 20rem;
     height: 4.25rem;
     padding: 0;
-    margin: 25px auto 25px auto;
+    margin: 25px 0 25px 0;
     justify-content: center;
     align-items: center;
 }
