--- a/client/src/pages/Login/style.css
+++ b/client/src/pages/Login/style.css
@@ -1,7 +1,6 @@
 .login {
     display: flex;
-    width: 100%;
-    height: 100%;
+    flex: 0;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
@@ -10,34 +9,11 @@
 }
 
 .singin {
-    padding-top: 40px;
     color: #FFF;
     font-weight: bold;
-    font-size: 23px;
+    font-size: 3em;
+    margin: 20px;
 }
-
-/* .un {
-    width: 300px;
-    color: rgb(38, 50, 56);
-    font-weight: 700;
-    font-size: 14px;
-    letter-spacing: 1px;
-    background: #FFF;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 20px;
-    outline: none;
-    box-sizing: border-box;
-    border: 2px solid rgba(0, 0, 0, 0.02);
-    margin-bottom: 50px;
-    margin-left: 46px;
-    text-align: center;
-    margin-bottom: 27px;
-
-
-    flex:1;
-} */
-
 
 .input {
     display: block;
