--- a/client/src/components/Form/AnchorButton/style.css
+++ b/client/src/components/Form/AnchorButton/style.css
@@ -1,13 +1,13 @@
-.round-button-wrapper {
+.anchor-button-wrapper {
     display: flex;
     width: 20rem;
     height: 4.25rem;
     padding: 0;
-    margin: 25px 0 25px 0;
+    margin: 10px 0;
     justify-content: center;
     align-items: center;
 }
-.round-button-wrapper .round-button {
+.anchor-button-wrapper .anchor-button {
     display: block;
     flex: none;
     width: 15rem;
@@ -24,7 +24,7 @@
     cursor: pointer;
     transition: all 0.1s;
 }
-.round-button-wrapper:hover .round-button {
+.anchor-button-wrapper:hover .anchor-button {
     width: 100%;
     height: 100%;
     line-height: 70px;
