--- a/client/src/components/Form/Submit/style.css
+++ b/client/src/components/Form/Submit/style.css
@@ -1,5 +1,5 @@
 
-.round-submit-wrapper {
+.submit-wrapper {
     display: flex;
     width: 20rem;
     height: 4.25rem;
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
 }
-.round-submit-wrapper .round-submit {
+.submit-wrapper .submit {
     display: block;
     flex: none;
     width: 15rem;
@@ -25,7 +25,7 @@
     cursor: pointer;
     transition: all 0.1s;
 }
-.round-submit-wrapper:hover .round-submit {
+.submit-wrapper:hover .submit {
     width: 100%;
     height: 100%;
     line-height: 70px;
